--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -9,3 +9,6 @@ export DUMP_LOGS_DEFAULT="true"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="true"
 export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
 export FINAL_TEAR_DOWN_DEFAULT="true"
+export FLEET_MANAGER_RESOURCES_DEFAULT='{"requests":{"cpu":"500m","memory":"1000Mi"},"limits":{"cpu":"500m","memory":"1000Mi"}}'
+export FLEETSHARD_SYNC_RESOURCES_DEFAULT='{"requests":{"cpu":"500m","memory":"1000Mi"},"limits":{"cpu":"500m","memory":"1000Mi"}}'
+export DB_RESOURCES_DEFAULT='{"requests":{"cpu":"500m","memory":"1000Mi"},"limits":{"cpu":"500m","memory":"1000Mi"}}'
