--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -9,6 +9,9 @@ export DUMP_LOGS_DEFAULT="true"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="true"
 export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
 export FINAL_TEAR_DOWN_DEFAULT="true"
-export FLEET_MANAGER_RESOURCES_DEFAULT='{"requests":{"cpu":"500m","memory":"1000Mi"},"limits":{"cpu":"500m","memory":"1000Mi"}}'
-export FLEETSHARD_SYNC_RESOURCES_DEFAULT='{"requests":{"cpu":"500m","memory":"1000Mi"},"limits":{"cpu":"500m","memory":"1000Mi"}}'
-export DB_RESOURCES_DEFAULT='{"requests":{"cpu":"500m","memory":"1000Mi"},"limits":{"cpu":"500m","memory":"1000Mi"}}'
+
+# To be adjusted for runnign in OpenShift CI
+# export FLEET_MANAGER_RESOURCES_DEFAULT='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
+# export FLEETSHARD_SYNC_RESOURCES_DEFAULT='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
+# export DB_RESOURCES_DEFAULT='{"requests":{"cpu":"100m","memory":"300Mi"},"limits":{"cpu":"100m","memory":"300Mi"}}'
+# export RHACS_OPERATOR_RESOURCES_DEFAULTS='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
