--- a/dev/config/dataplane-cluster-configuration-crc.yaml
+++ b/dev/config/dataplane-cluster-configuration-crc.yaml
@@ -5,7 +5,7 @@
 #  'deprovisioning' and will later be deleted.
 #- This list is ordered, any new cluster should be appended at the end.
 clusters:
- - name: crc-admin  # Uncomment if using minikube
+ - name: crc-admin
    cluster_id: 1234567890abcdef1234567890abcdef
    cloud_provider: standalone
    region: standalone
