--- a/dashboards/grafana-dashboard-acs-fleet-manager-slos.configmap.yaml
+++ b/dashboards/grafana-dashboard-acs-fleet-manager-slos.configmap.yaml
@@ -36,7 +36,7 @@ data:
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
       "id": 417,
-      "iteration": 1657693102999,
+      "iteration": 1657746518714,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -106,74 +106,7 @@ data:
               "refId": "A"
             }
           ],
-          "title": "API Availability (99%) ",
-          "type": "gauge"
-        },
-        {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "$datasource"
-          },
-          "fieldConfig": {
-            "defaults": {
-              "decimals": 2,
-              "mappings": [],
-              "max": 100,
-              "min": 0,
-              "thresholds": {
-                "mode": "absolute",
-                "steps": [
-                  {
-                    "color": "red",
-                    "value": null
-                  },
-                  {
-                    "color": "#EAB839",
-                    "value": 99
-                  },
-                  {
-                    "color": "light-green",
-                    "value": 99.5
-                  }
-                ]
-              },
-              "unit": "percent"
-            },
-            "overrides": []
-          },
-          "gridPos": {
-            "h": 7,
-            "w": 4,
-            "x": 4,
-            "y": 0
-          },
-          "id": 11,
-          "links": [],
-          "options": {
-            "orientation": "auto",
-            "reduceOptions": {
-              "calcs": [
-                "mean"
-              ],
-              "fields": "",
-              "values": false
-            },
-            "showThresholdLabels": false,
-            "showThresholdMarkers": true
-          },
-          "pluginVersion": "9.0.1",
-          "targets": [
-            {
-              "datasource": {
-                "uid": "$datasource"
-              },
-              "expr": "(sum(rate(api_inbound_request_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",le=\"1\",code!~\"5..\"}[$__range]))/sum(rate(api_inbound_request_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range])))*100",
-              "interval": "",
-              "legendFormat": "",
-              "refId": "A"
-            }
-          ],
-          "title": "API Latency p99 < 1s",
+          "title": "API Availability > 99%",
           "type": "gauge"
         },
         {
@@ -211,7 +144,7 @@ data:
           "gridPos": {
             "h": 7,
             "w": 4,
-            "x": 8,
+            "x": 4,
             "y": 0
           },
           "id": 14,
@@ -234,13 +167,80 @@ data:
               "datasource": {
                 "uid": "$datasource"
               },
-              "expr": "(sum(rate(api_inbound_request_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",le=\"0.1\",code!~\"5..\"}[$__range]))/sum(rate(api_inbound_request_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range]))) * 100",
+              "expr": "(sum(rate(api_inbound_request_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",le=\"0.1\"}[$__range]))/sum(rate(api_inbound_request_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range]))) * 100",
               "interval": "",
               "legendFormat": "",
               "refId": "A"
             }
           ],
           "title": "API Latency p90 < 0.1s",
+          "type": "gauge"
+        },
+        {
+          "datasource": {
+            "type": "prometheus",
+            "uid": "$datasource"
+          },
+          "fieldConfig": {
+            "defaults": {
+              "decimals": 2,
+              "mappings": [],
+              "max": 100,
+              "min": 0,
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {
+                    "color": "red",
+                    "value": null
+                  },
+                  {
+                    "color": "#EAB839",
+                    "value": 99
+                  },
+                  {
+                    "color": "light-green",
+                    "value": 99.5
+                  }
+                ]
+              },
+              "unit": "percent"
+            },
+            "overrides": []
+          },
+          "gridPos": {
+            "h": 7,
+            "w": 4,
+            "x": 8,
+            "y": 0
+          },
+          "id": 11,
+          "links": [],
+          "options": {
+            "orientation": "auto",
+            "reduceOptions": {
+              "calcs": [
+                "mean"
+              ],
+              "fields": "",
+              "values": false
+            },
+            "showThresholdLabels": false,
+            "showThresholdMarkers": true
+          },
+          "pluginVersion": "9.0.1",
+          "targets": [
+            {
+              "datasource": {
+                "uid": "$datasource"
+              },
+              "expr": "(sum(rate(api_inbound_request_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",le=\"1\"}[$__range]))/sum(rate(api_inbound_request_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range])))*100",
+              "interval": "",
+              "legendFormat": "",
+              "refId": "A"
+            }
+          ],
+          "title": "API Latency p99 < 1s",
           "type": "gauge"
         },
         {
@@ -300,13 +300,13 @@ data:
               "datasource": {
                 "uid": "$datasource"
               },
-              "expr": "sum(rate(fleet_manager_dinosaur_operations_success_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[28d]))/sum(rate(fleet_manager_dinosaur_operations_total_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[28d])) * 100",
+              "expr": "sum(rate(fleet_manager_dinosaur_operations_success_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range]))/sum(rate(fleet_manager_dinosaur_operations_total_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range])) * 100",
               "interval": "",
               "legendFormat": "Create Operation",
               "refId": "A"
             }
           ],
-          "title": "Correctness (Create)",
+          "title": "Correctness (Create) > 95%",
           "type": "gauge"
         },
         {
@@ -367,13 +367,13 @@ data:
               "datasource": {
                 "uid": "$datasource"
               },
-              "expr": "sum(rate(fleet_manager_dinosaur_operations_success_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\", operation=\"delete\"}[28d]))/sum(rate(fleet_manager_dinosaur_operations_total_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\", operation=\"delete\"}[28d])) * 100",
+              "expr": "sum(rate(fleet_manager_dinosaur_operations_success_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\", operation=\"delete\"}[$__range]))/sum(rate(fleet_manager_dinosaur_operations_total_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\", operation=\"delete\"}[$__range])) * 100",
               "interval": "",
               "legendFormat": "Create Operation",
               "refId": "A"
             }
           ],
-          "title": "Correctness (Delete)",
+          "title": "Correctness (Delete) > 95%",
           "type": "gauge"
         },
         {
@@ -433,7 +433,7 @@ data:
               "datasource": {
                 "uid": "$datasource"
               },
-              "expr": "(sum(rate(fleet_manager_worker_dinosaur_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",jobType=\"dinosaur_create\", le=\"3600\"}[28d])+1) / sum(rate(fleet_manager_worker_dinosaur_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\",jobType=\"dinosaur_create\"}[28d])+1)) * 100",
+              "expr": "(sum(rate(fleet_manager_worker_dinosaur_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",jobType=\"dinosaur_create\", le=\"3600\"}[$__range])+1) / sum(rate(fleet_manager_worker_dinosaur_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\",jobType=\"dinosaur_create\"}[$__range])+1)) * 100",
               "interval": "",
               "legendFormat": "Create Operation",
               "refId": "A"
@@ -739,6 +739,77 @@ data:
           ],
           "title": "Lifecycle Correctness",
           "type": "timeseries"
+        },
+        {
+          "datasource": {
+            "type": "prometheus",
+            "uid": "$datasource"
+          },
+          "description": "",
+          "fieldConfig": {
+            "defaults": {
+              "color": {
+                "mode": "thresholds"
+              },
+              "custom": {
+                "fillOpacity": 80,
+                "gradientMode": "none",
+                "hideFrom": {
+                  "legend": false,
+                  "tooltip": false,
+                  "viz": false
+                },
+                "lineWidth": 1
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {
+                    "color": "green",
+                    "value": null
+                  },
+                  {
+                    "color": "red",
+                    "value": 80
+                  }
+                ]
+              }
+            },
+            "overrides": []
+          },
+          "gridPos": {
+            "h": 6,
+            "w": 24,
+            "x": 0,
+            "y": 32
+          },
+          "id": 7,
+          "links": [],
+          "options": {
+            "bucketOffset": 0,
+            "legend": {
+              "calcs": [],
+              "displayMode": "list",
+              "placement": "bottom"
+            }
+          },
+          "pluginVersion": "9.0.1",
+          "targets": [
+            {
+              "datasource": {
+                "uid": "$datasource"
+              },
+              "editorMode": "code",
+              "expr": "sum(fleet_manager_worker_dinosaur_duration_bucket{namespace=\"$namespace\",jobType=\"dinosaur_create\"}) by (le)",
+              "interval": "",
+              "legendFormat": "p90-create",
+              "range": true,
+              "refId": "A"
+            }
+          ],
+          "title": "Creation Latency",
+          "type": "histogram"
         }
       ],
       "refresh": false,
@@ -823,6 +894,6 @@ data:
       "timezone": "",
       "title": "ACS Fleet Manager SLOs",
       "uid": "T2kek3H9a",
-      "version": 1,
+      "version": 6,
       "weekStart": ""
     }
