New flag SKIP_TESTS (for testing purposes) Added README Smarter defaulting of configuration options Remove KUBECONFIG setting, not needed anymore. Remove unused script

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -2,7 +2,7 @@ export ACSMS_NAMESPACE_DEFAULT="acsms"
 export MANIFESTS_DIR="$GITROOT/dev/env/manifests"
 export KUBECTL_DEFAULT="kubectl"
 export DOCKER_DEFAULT="docker"
-export CLUSTER_TYPE_DEFAULT="minikube"
+export CLUSTER_TYPE_DEFAULT=""
 export INHERIT_IMAGEPULLSECRETS_DEFAULT="false" # pragma: allowlist secret
 export CLUSTER_ID_DEFAULT="1234567890abcdef1234567890abcdef"
 
@@ -13,11 +13,10 @@ export CENTRAL_VERSION_DEFAULT=$(echo "$STACKROX_VERSION_TAG" | sed -e 's/0-nigh
 export SCANNER_VERSION_DEFAULT="2.25.1" # This one matches the above operator version tag.
 export STACKROX_OPERATOR_NAMESPACE_DEFAULT="stackrox-operator"
 export FLEET_MANAGER_IMAGE_DEFAULT="fleet-manager:$(make -s -C "$GITROOT" tag)"
-export KUBECONFIG_DEFAULT="$HOME/.kube/config"
 export ENABLE_DB_PORT_FORWARDING_DEFAULT="false"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="false"
 export OPENSHIFT_MARKETPLACE_DEFAULT="false"
-export INSTALL_OPERATOR_DEFAULT="false"
+export INSTALL_OPERATOR_DEFAULT="true"
 
 export DATABASE_HOST_DEFAULT="db"
 export DATABASE_PORT_DEFAULT="5432"
@@ -48,6 +47,7 @@ export OPERATOR_SOURCE_DEFAULT="quay"
 export INSTALL_OLM_DEFAULT="true"
 export FINAL_TEAR_DOWN_DEFAULT="false"
 export DOCKER_CONFIG_DEFAULT="${GITROOT}/.docker"
+export SKIP_TESTS_DEFAULT="false"
 
 export KUBECONF_CLUSTER_SERVER_OVERRIDE_DEFAULT="false"
 
