Only log into image registry for local deployments

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -1,3 +1,5 @@
+# shellcheck shell=bash
+
 export ACSMS_NAMESPACE_DEFAULT="acsms"
 export MANIFESTS_DIR="$GITROOT/dev/env/manifests"
 export KUBECTL_DEFAULT="kubectl"
