--- a/dev/env/defaults/10-operator-source.env
+++ b/dev/env/defaults/10-operator-source.env
@@ -1,3 +1,5 @@
+# shellcheck shell=bash
+
 if [[ "${CLUSTER_TYPE:-}" != "openshift" && "${INSTALL_OPERATOR:-$INSTALL_OPERATOR_DEFAULT}" == "true" ]]; then
     export OPERATOR_SOURCE_DEFAULT="quay"
     export INSTALL_OLM_DEFAULT="true"
