--- a/dev/env/defaults/20-imagepullsecrets.env
+++ b/dev/env/defaults/20-imagepullsecrets.env
@@ -1,3 +1,5 @@
+# shellcheck shell=bash
+
 if [[ ("${FLEET_MANAGER_IMAGE:-$FLEET_MANAGER_IMAGE_DEFAULT}" =~ ^quay.io/) ||
     ("${INSTALL_OPERATOR:-$INSTALL_OPERATOR_DEFAULT}" == "true" && "${OPERATOR_SOURCE:-$OPERATOR_SOURCE_DEFAULT}" == "quay") ]] \
     ; then
