Initial work on step by step guide to setup OSD cluster

--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -14,7 +14,7 @@ spec:
   channel: latest
   installPlanApproval: Automatic
   name: rhacs-operator
-  source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  source: {{ .Values.acsOperator.source }}
+  sourceNamespace: {{ .Values.acsOperator.sourceNamespace }}
   startingCSV: {{ .Values.acsOperator.startingCSV }}
 {{- end }}
