--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -1,10 +1,12 @@
+# shellcheck shell=bash
+
 export ACSMS_NAMESPACE_DEFAULT="acsms"
 export MANIFESTS_DIR="$GITROOT/dev/env/manifests"
 export KUBECTL_DEFAULT="kubectl"
 export DOCKER_DEFAULT="docker"
-export CLUSTER_TYPE_DEFAULT="minikube"
-export INHERIT_IMAGEPULLSECRETS_DEFAULT="false"
-export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
+export CLUSTER_TYPE_DEFAULT=""
+export INHERIT_IMAGEPULLSECRETS_DEFAULT="false" # pragma: allowlist secret
+export CLUSTER_ID_DEFAULT="1234567890abcdef1234567890abcdef"
 
 export IMAGE_REGISTRY_DEFAULT="quay.io/rhacs-eng"
 STACKROX_VERSION_TAG="3.70.0-nightly-20220707"
@@ -12,19 +14,20 @@ export STACKROX_OPERATOR_VERSION_DEFAULT="${STACKROX_VERSION_TAG}"
 export CENTRAL_VERSION_DEFAULT=$(echo "$STACKROX_VERSION_TAG" | sed -e 's/0-nightly/x-nightly/;')
 export SCANNER_VERSION_DEFAULT="2.25.1" # This one matches the above operator version tag.
 export STACKROX_OPERATOR_NAMESPACE_DEFAULT="stackrox-operator"
-export OPENSHIFT_CI="${OPENSHIFT_CI:-}"
-export FLEET_MANAGER_IMAGE_DEFAULT="$(make -s -C "$GITROOT" image-tag)"
-export KUBECONFIG_DEFAULT="$HOME/.kube/config"
+export FLEET_MANAGER_IMAGE_DEFAULT="fleet-manager:$(make -s -C "$GITROOT" tag)"
 export ENABLE_DB_PORT_FORWARDING_DEFAULT="false"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="false"
 export OPENSHIFT_MARKETPLACE_DEFAULT="false"
-export INSTALL_OPERATOR_DEFAULT="false"
+export INSTALL_OPERATOR_DEFAULT="true"
 
-export POSTGRES_DB_DEFAULT="rhacsms"
-export POSTGRES_USER_DEFAULT="fleet_manager"
-export POSTGRES_PASSWORD_DEFAULT="letmein" # pragma: allowlist secret
+export DATABASE_HOST_DEFAULT="db"
+export DATABASE_PORT_DEFAULT="5432"
+export DATABASE_NAME_DEFAULT="rhacsms"
+export DATABASE_USER_DEFAULT="fleet_manager"
+export DATABASE_PASSWORD_DEFAULT="letmein" # pragma: allowlist secret
+export DATABASE_TLS_CERT_DEFAULT=""
 
-export AUTH_TYPE_DEFAULT="OCM"
+export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
 export OCM_SERVICE_CLIENT_ID_DEFAULT=""
 export OCM_SERVICE_CLIENT_SECRET_DEFAULT=""
 export OCM_SERVICE_TOKEN_DEFAULT=""
@@ -45,8 +48,10 @@ export DUMP_LOGS_DEFAULT="false"
 export OPERATOR_SOURCE_DEFAULT="quay"
 export INSTALL_OLM_DEFAULT="true"
 export FINAL_TEAR_DOWN_DEFAULT="false"
+export DOCKER_CONFIG_DEFAULT="${GITROOT}/.docker"
+export SKIP_TESTS_DEFAULT="false"
 
-export KUBECONF_CLUSTER_SERVER_OVERRIDE_DEFAULT=""
+export KUBECONF_CLUSTER_SERVER_OVERRIDE_DEFAULT="false"
 
 export FLEET_MANAGER_RESOURCES_DEFAULT='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
 export FLEETSHARD_SYNC_RESOURCES_DEFAULT='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
