ROX-11428: Initialise auth provider from fleetshard-sync (#178)

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -10,6 +10,9 @@ fleetshardSync:
   ocmToken: ""
   fleetManagerEndpoint: ""
   clusterId: ""
+  # Flag controlling whether tenant's sso.redhat.com auth provider will be initialised by fleetshard-sync.
+  # Currently this functionality is supported only when fleetshard-sync is deployed in the same k8s cluster as tenant.
+  createAuthProvider: true
   # Static token, only required in combination with authType=STATIC_TOKEN. A sample static token can be found
   # within Bitwarden (ACS Fleet* static token).
   staticToken: ""
