--- a/dashboards/grafana-dashboard-acs-fleet-manager-slos.configmap.yaml
+++ b/dashboards/grafana-dashboard-acs-fleet-manager-slos.configmap.yaml
@@ -36,7 +36,7 @@ data:
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
       "id": 417,
-      "iteration": 1657895635860,
+      "iteration": 1658129930624,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -455,7 +455,7 @@ data:
             "type": "prometheus",
             "uid": "${datasource}"
           },
-          "description": "",
+          "description": "An error budget is the maximum amount errors that a technical system can fail without contractual consequences. The Error budget exhaustion shows how much allowable errors the service has used. For example, we have API Availability 99% target value. Suppose that actual value is 99.7%. That means that error budget is 1% and error budget exhaustion is 30%.",
           "fieldConfig": {
             "defaults": {
               "color": {
@@ -486,12 +486,12 @@ data:
             "overrides": []
           },
           "gridPos": {
-            "h": 7,
-            "w": 4,
+            "h": 8,
+            "w": 24,
             "x": 0,
             "y": 7
           },
-          "id": 19,
+          "id": 25,
           "links": [],
           "options": {
             "orientation": "auto",
@@ -518,348 +518,72 @@ data:
               "hide": false,
               "instant": true,
               "interval": "",
-              "legendFormat": "__auto",
+              "legendFormat": "API Availability > 99%",
               "range": false,
               "refId": "B"
-            }
-          ],
-          "title": "Error budget API Availability > 99%",
-          "type": "gauge"
-        },
-        {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "$datasource"
-          },
-          "description": "90% requests should be faster than 100 milliseconds",
-          "fieldConfig": {
-            "defaults": {
-              "mappings": [],
-              "max": 1,
-              "min": 0,
-              "thresholds": {
-                "mode": "absolute",
-                "steps": [
-                  {
-                    "color": "light-green",
-                    "value": null
-                  },
-                  {
-                    "color": "#EAB839",
-                    "value": 0.3
-                  },
-                  {
-                    "color": "red",
-                    "value": 0.7
-                  }
-                ]
-              },
-              "unit": "percentunit"
             },
-            "overrides": []
-          },
-          "gridPos": {
-            "h": 7,
-            "w": 4,
-            "x": 4,
-            "y": 7
-          },
-          "id": 20,
-          "links": [],
-          "options": {
-            "orientation": "auto",
-            "reduceOptions": {
-              "calcs": [
-                "mean"
-              ],
-              "fields": "",
-              "values": false
-            },
-            "showThresholdLabels": false,
-            "showThresholdMarkers": true
-          },
-          "pluginVersion": "9.0.1",
-          "targets": [
             {
               "datasource": {
-                "uid": "$datasource"
+                "type": "prometheus",
+                "uid": "${datasource}"
               },
+              "editorMode": "code",
               "expr": "(1-(sum(rate(api_inbound_request_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",le=\"0.1\"}[$__range]))/sum(rate(api_inbound_request_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range]))))/(1-0.9)",
-              "interval": "",
-              "legendFormat": "",
+              "hide": false,
+              "legendFormat": "API Latency p90 < 0.1s",
+              "range": true,
               "refId": "A"
-            }
-          ],
-          "title": "Error budget API Latency p90",
-          "type": "gauge"
-        },
-        {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "$datasource"
-          },
-          "description": "99% requests should be faster than 1 second",
-          "fieldConfig": {
-            "defaults": {
-              "mappings": [],
-              "max": 1,
-              "min": 0,
-              "thresholds": {
-                "mode": "absolute",
-                "steps": [
-                  {
-                    "color": "light-green",
-                    "value": null
-                  },
-                  {
-                    "color": "#EAB839",
-                    "value": 0.3
-                  },
-                  {
-                    "color": "red",
-                    "value": 0.7
-                  }
-                ]
-              },
-              "unit": "percentunit"
             },
-            "overrides": []
-          },
-          "gridPos": {
-            "h": 7,
-            "w": 4,
-            "x": 8,
-            "y": 7
-          },
-          "id": 21,
-          "links": [],
-          "options": {
-            "orientation": "auto",
-            "reduceOptions": {
-              "calcs": [
-                "mean"
-              ],
-              "fields": "",
-              "values": false
-            },
-            "showThresholdLabels": false,
-            "showThresholdMarkers": true
-          },
-          "pluginVersion": "9.0.1",
-          "targets": [
             {
               "datasource": {
-                "uid": "$datasource"
+                "type": "prometheus",
+                "uid": "${datasource}"
               },
+              "editorMode": "code",
               "expr": "(1-sum(rate(api_inbound_request_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",le=\"1\"}[$__range]))/sum(rate(api_inbound_request_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range])))/(1-0.99)",
-              "interval": "",
-              "legendFormat": "",
-              "refId": "A"
-            }
-          ],
-          "title": "Error budget API Latency p99",
-          "type": "gauge"
-        },
-        {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "$datasource"
-          },
-          "description": "95% central creations should be successful",
-          "fieldConfig": {
-            "defaults": {
-              "mappings": [],
-              "max": 1,
-              "min": 0,
-              "thresholds": {
-                "mode": "absolute",
-                "steps": [
-                  {
-                    "color": "light-green",
-                    "value": null
-                  },
-                  {
-                    "color": "#EAB839",
-                    "value": 0.3
-                  },
-                  {
-                    "color": "red",
-                    "value": 0.7
-                  }
-                ]
-              },
-              "unit": "percentunit"
+              "hide": false,
+              "legendFormat": "API Latency p99",
+              "range": true,
+              "refId": "C"
             },
-            "overrides": []
-          },
-          "gridPos": {
-            "h": 7,
-            "w": 4,
-            "x": 12,
-            "y": 7
-          },
-          "id": 22,
-          "links": [],
-          "options": {
-            "orientation": "auto",
-            "reduceOptions": {
-              "calcs": [
-                "mean"
-              ],
-              "fields": "",
-              "values": false
-            },
-            "showThresholdLabels": false,
-            "showThresholdMarkers": true
-          },
-          "pluginVersion": "9.0.1",
-          "targets": [
             {
               "datasource": {
-                "uid": "$datasource"
+                "type": "prometheus",
+                "uid": "${datasource}"
               },
+              "editorMode": "code",
               "expr": "(1-sum(rate(fleet_manager_dinosaur_operations_success_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range]))/sum(rate(fleet_manager_dinosaur_operations_total_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\"}[$__range])))/(1-0.95)",
-              "interval": "",
-              "legendFormat": "Create Operation",
-              "refId": "A"
-            }
-          ],
-          "title": "Error budget Correctness (Create)",
-          "type": "gauge"
-        },
-        {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "$datasource"
-          },
-          "description": "95% central deletions should be successful",
-          "fieldConfig": {
-            "defaults": {
-              "decimals": 0,
-              "mappings": [],
-              "max": 1,
-              "min": 0,
-              "thresholds": {
-                "mode": "absolute",
-                "steps": [
-                  {
-                    "color": "light-green",
-                    "value": null
-                  },
-                  {
-                    "color": "#EAB839",
-                    "value": 0.3
-                  },
-                  {
-                    "color": "red",
-                    "value": 0.7
-                  }
-                ]
-              },
-              "unit": "percentunit"
+              "hide": false,
+              "legendFormat": "Correctness (Create) > 95%",
+              "range": true,
+              "refId": "D"
             },
-            "overrides": []
-          },
-          "gridPos": {
-            "h": 7,
-            "w": 4,
-            "x": 16,
-            "y": 7
-          },
-          "id": 23,
-          "links": [],
-          "options": {
-            "orientation": "auto",
-            "reduceOptions": {
-              "calcs": [
-                "mean"
-              ],
-              "fields": "",
-              "values": false
-            },
-            "showThresholdLabels": false,
-            "showThresholdMarkers": true
-          },
-          "pluginVersion": "9.0.1",
-          "targets": [
             {
               "datasource": {
-                "uid": "$datasource"
+                "type": "prometheus",
+                "uid": "${datasource}"
               },
+              "editorMode": "code",
               "expr": "(1-sum(rate(fleet_manager_dinosaur_operations_success_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\", operation=\"delete\"}[$__range]))/sum(rate(fleet_manager_dinosaur_operations_total_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\", operation=\"delete\"}[$__range])))/(1-0.95)",
-              "interval": "",
-              "legendFormat": "Create Operation",
-              "refId": "A"
-            }
-          ],
-          "title": "Error budget Correctness (Delete)",
-          "type": "gauge"
-        },
-        {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "$datasource"
-          },
-          "description": "90% of central creations should take less than 1 hour",
-          "fieldConfig": {
-            "defaults": {
-              "mappings": [],
-              "max": 1,
-              "min": 0,
-              "thresholds": {
-                "mode": "absolute",
-                "steps": [
-                  {
-                    "color": "light-green",
-                    "value": null
-                  },
-                  {
-                    "color": "#EAB839",
-                    "value": 0.3
-                  },
-                  {
-                    "color": "red",
-                    "value": 0.7
-                  }
-                ]
-              },
-              "unit": "percentunit"
+              "hide": false,
+              "legendFormat": "Correctness (Delete) > 95%",
+              "range": true,
+              "refId": "E"
             },
-            "overrides": []
-          },
-          "gridPos": {
-            "h": 7,
-            "w": 4,
-            "x": 20,
-            "y": 7
-          },
-          "id": 24,
-          "links": [],
-          "options": {
-            "orientation": "auto",
-            "reduceOptions": {
-              "calcs": [
-                "mean"
-              ],
-              "fields": "",
-              "values": false
-            },
-            "showThresholdLabels": false,
-            "showThresholdMarkers": true
-          },
-          "pluginVersion": "9.0.1",
-          "targets": [
             {
               "datasource": {
-                "uid": "$datasource"
+                "type": "prometheus",
+                "uid": "${datasource}"
               },
+              "editorMode": "code",
               "expr": "(1-sum(rate(fleet_manager_worker_dinosaur_duration_bucket{job=\"fleet-manager-metrics\",namespace=\"$namespace\",jobType=\"dinosaur_create\", le=\"3600\"}[$__range])+1) / sum(rate(fleet_manager_worker_dinosaur_duration_count{job=\"fleet-manager-metrics\",namespace=\"$namespace\",jobType=\"dinosaur_create\"}[$__range])+1))/(1-0.9)",
-              "interval": "",
-              "legendFormat": "Create Operation",
-              "refId": "A"
+              "hide": false,
+              "legendFormat": "Creation latency p90 < 60m",
+              "range": true,
+              "refId": "F"
             }
           ],
-          "title": "Error budget Creation latency p90",
+          "title": "Error budget exhaustion",
           "type": "gauge"
         },
         {
@@ -923,7 +647,7 @@ data:
             "h": 9,
             "w": 24,
             "x": 0,
-            "y": 14
+            "y": 15
           },
           "id": 2,
           "links": [],
@@ -1019,7 +743,7 @@ data:
             "h": 8,
             "w": 24,
             "x": 0,
-            "y": 23
+            "y": 24
           },
           "id": 4,
           "links": [],
@@ -1136,7 +860,7 @@ data:
             "h": 8,
             "w": 24,
             "x": 0,
-            "y": 31
+            "y": 32
           },
           "id": 6,
           "links": [],
@@ -1205,7 +929,7 @@ data:
             "h": 11,
             "w": 24,
             "x": 0,
-            "y": 39
+            "y": 40
           },
           "id": 7,
           "links": [],
@@ -1325,6 +1049,6 @@ data:
       "timezone": "",
       "title": "ACS Fleet Manager SLOs",
       "uid": "T2kek3H9a",
-      "version": 18,
+      "version": 19,
       "weekStart": ""
     }
