ROX-10835: enable gosec linter, add fixes to suppress warnings
The changes are workarounds so that gosec does not warn about
G601: Implicit memory aliasing in for loop.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -98,7 +98,7 @@ linters:
     # - revive # replaces golint TODO(ROX-10828): enable revive checks
     # - gomnd
     # - goprintffuncname
-    # - gosec TODO(ROX-10835): enable gosec checks
+    - gosec
     - gosimple
     - govet
     - ineffassign
