Use 'oc' on openshift for retrieving the cluster name instead of kubectl, which is not present there

--- a/dev/env/defaults/02-infra.env
+++ b/dev/env/defaults/02-infra.env
@@ -2,7 +2,7 @@
 
 is_infra_cluster() {
     local server
-    server=$(kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}')
+    server=$(try_kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}')
     if [[ "$server" =~ infra\.rox\.systems ]]; then
         return 0
     else
