Wrap errors from external libraries

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -143,5 +143,5 @@ linters:
     # - unused
     # - varcheck
     # - whitespace
-    # - wrapcheck #TODO(ROX-10829): enable wrapcheck checks
+    - wrapcheck
     # - wsl
