--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -52,6 +52,7 @@ export FINAL_TEAR_DOWN_DEFAULT="false"
 export DOCKER_CONFIG_DEFAULT="${GITROOT}/.docker"
 export SKIP_TESTS_DEFAULT="false"
 export ENABLE_DINOSAUR_EXTERNAL_CERTIFICATE_DEFAULT=false
+export DINOSAUR_DOMAIN_NAME_DEFAULT=rhacs-dev.com
 
 export KUBECONF_CLUSTER_SERVER_OVERRIDE_DEFAULT="false"
 
