fix PodDisruptionBudget maxUnavailable typo

--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -1179,7 +1179,7 @@ objects:
     metadata:
       name: fleet-manager-pdb
     spec:
-      maxUnavailabe: "50%"
+      maxUnavailable: "50%"
       selector:
         matchLabels:
           app: fleet-manager
