--- a/dev/env/manifests/fleet-manager/01-fleet-manager-secrets.yaml
+++ b/dev/env/manifests/fleet-manager/01-fleet-manager-secrets.yaml
@@ -28,8 +28,8 @@ stringData:
   rhsso-logs.clientSecret: ""
   rhsso-metrics.clientId: ""
   rhsso-metrics.clientSecret: ""
-  dinosaur-tls.crt: ""
-  dinosaur-tls.key: ""
+  central-tls.crt: ""
+  central-tls.key: ""
   kubeconfig: |
     ${KUBE_CONFIG}
   fleet-static-token: "${STATIC_TOKEN}"
